新增 springboot-clickhouse:整合mybatis-plus+clickhouse

--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,8 @@
         <module>springboot-limit</module>
         <module>springboot-docker</module>
         <module>springboot-postgre</module>
+        <module>springboot-mqtt</module>
+        <module>springboot-clickhouse</module>
     </modules>
 
 </project>
